--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.1.0",
-    "node-sass": "^7.0.1",
+    "sass": "^1.55",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-collapsible": "^2.10.0",
