--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "html-webpack-plugin": "^5.5.0",
     "babel-loader": "^8.2.5",
     "core-js": "^3.25.3",
     "regenerator-runtime": "^0.13.9",
-    "sass": "^1.55.0",
+    "sass": "1.55.0",
     "sass-loader": "^13.0.2",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
