--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack serve --mode development",
-    "build": "webpack --mode production --progress --hide-modules",
+    "build": "webpack",
     "tscheck": "tsc"
   },
   "devDependencies": {
