--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "html-webpack-plugin": "^5.5.0",
     "babel-loader": "^8.2.5",
     "core-js": "^3.25.3",
+    "html-webpack-plugin": "^5.5.0",
     "regenerator-runtime": "^0.13.9",
     "sass": "1.55.0",
     "sass-loader": "^13.0.2",
@@ -51,8 +51,8 @@
     "bootstrap": "^5.2.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
+    "http-server": "^14.1.1",
     "image-webpack-loader": "^8.1.0",
-    "sass": "^1.55",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-collapsible": "^2.10.0",
@@ -66,6 +66,7 @@
     "react-spinners": "^0.13.4",
     "reactjs-popup": "^2.0.5",
     "reactjs-tailwind": "^0.1.9",
+    "sass": "^1.55",
     "scss": "^0.2.4",
     "style-loader": "^3.3.1",
     "typescript": "^4.7.4",
